ecommerse-nodejs-client-master/ecommerse-nodejs-client-master/k8-manifests/dispatch-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  labels:
    app: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nagasatishdocker/ecomcllient:3
        ports:
        - containerPort: 80
