ecommerse-nodejs-client-master/ecommerse-nodejs-client-master/k8-manifests/dispatch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2
spec:
  selector:
    app: nginx2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
